ajustar html e incluir arquivos css

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciamento</title>
+    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="./css/model.css">
+    <link rel="stylesheet" href="./css/table.css">
 
+   
+</head>
+
+<body>
+    
     <header>
         <h1>Gerenciamento de hospedes</h1>
     </header>
@@ -62,9 +70,5 @@
         </section>
 
     </main>
-
-</head>
-<body>
-    
 </body>
 </html>
