Construcao da classe hospede e metodo de adicionar

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
                 </tr>
             </thead>
 
-            <tbody>
+            <tbody class="Tlist">
 
             </tbody>
         </table>
@@ -59,6 +59,7 @@
                     <input type="text" id="plataforma" class="modal-form" placeholder="Plataforma" autocomplete="off" required>
                     <input type="text" id="diarias" class="modal-form" placeholder="Diárias" autocomplete="off" required>
                     <input type="number" id="valor-reserva" class="modal-form" placeholder="Valor da reserva" autocomplete="on" required>
+                    <button type="submit"class="btn-adicionar">Confirmar</button>
                 </section>
 
                 <section class="modal-edit-ask">
@@ -70,5 +71,7 @@
         </section>
 
     </main>
+
+    <script href="./script.js"></script>
 </body>
 </html>
