Adicionar estilo a tabelas e aos botao adicionar

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,10 @@
     </header>
 
     <main>
-        <button type="button" class="btn-add" id="btn-cadastro">Adicionar Hospede</button>
+        <section class="btn-container">
+            <button type="button" class="btn-add" id="btn-cadastro">Adicionar Hospede</button>
+        </section>
+        
 
         <table class="hospede-table" id="hospt">
             <thead>
@@ -30,7 +33,7 @@
                     <th scope="col">Plataforma</th>
                     <th scope="col">Diárias</th>
                     <th scope="col">Valor/Reserva</th>
-                    <th scope="col">Faturamento</th>
+                    <th scope="col">acões</th>
                 </tr>
             </thead>
 
@@ -73,7 +76,7 @@
 
     </main>
 
-    <script src="./script.js"></script>
-    <script src="./functions.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/functions.js"></script>
 </body>
 </html>
